style.css
body {
    font-family: 'Times New Roman', Times, serif;
    display: flex;
    flex-direction: column;
}

.header,
.footer {
    background-color:#1F2937;
    color: #F9FAF8;
    display: flex;
}

.header {
    justify-content: space-between;
    padding-right: 10px;
}

.top {
    background-color: #1F2937;
    display: flex;
}

#top {
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
}

ul,
p {
    font-size: 18px;
    color: #e5e7eb;
}
 ul {
    display: flex;
    text-decoration: none;
    margin: 0;
    padding: 0;
    list-style-type: none;
    gap: 20px;
 }
.logo {
    font-size: 24px;
    color: #f9faf8;
    padding-left: 10px;
}



#bottom {
    font-size: 36px;
    font-weight: 900;
    color: #1f2937;
}
.button {
    background-color: #3882f6;
    color: #f9faf8;
    border-radius: 5px;
}

.quote {
    background-color: #e5e7eb;
    font-size: 36px;
    font-style: italic;
    color: #1f2937;
    padding: 100px;
}

.middle {
    display: flex;
    flex-direction: column;
}

#middle {
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
    text-align: center;
}
.card {
    display: flex; 
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.content {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 50px;
    padding-bottom: 30px;
}

.text {
    max-width: 200px;
}

.image {
    border-radius: 25px;
}

.top-text {
    padding-left: 32px;
}

.box {
    margin: 40px;
    background-color: #3882f6;
    padding: 15px;
}

#box {
    color:white;
    margin: 0;
    padding: 0;
}

